--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
+            <div class="navigation__background">&nbsp;</div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="" class="navigation__link"><span>01</span>About Natous</a></li>
+                    <li class="navigation__item"><a href="" class="navigation__link"><span>02</span>Your Benefits</a></li>
+                    <li class="navigation__item"><a href="" class="navigation__link"><span>03</span>Popular Tours</a></li>
+                    <li class="navigation__item"><a href="" class="navigation__link"><span>04</span>Stories</a></li>
+                    <li class="navigation__item"><a href="" class="navigation__link"><span>05</span>Book Now</a></li>
+                </ul>
+            </nav>
+        </div>
+
         <header class="header">
             
             <div class="header__logo-box">
@@ -181,7 +199,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -214,7 +232,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$497</p>
                                     </div>
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -247,7 +265,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$897</p>
                                     </div>
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -255,7 +273,7 @@
                 </div>
 
                 <div class="u-center-text u-margin-top-huge">
-                    <a href="" class="btn btn--green">Discover all tours</a>
+                    <a href="#popup" class="btn btn--green">Discover all tours</a>
                 </div>
  
             </section>
@@ -379,6 +397,25 @@
                     </div>
                 </div>
             </footer>
+
+            <div class="popup" id="popup">
+                <div class="popup__content">
+                    <div class="popup__left">
+                        <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                        <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                    </div>
+                    <div class="popup__right">
+                        <a href="#section-tours" class="popup__close">&times;</a>
+                        <h2 class="heading-secondary u-margin-button-small">Start booking now</h2>
+                        <h3 class="heading-tertiary u-margin-button-small">Important &ndash; Please read these terms before booking</h3>
+                        <p class="popup__text">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique distinctio id placeat libero magnam dolor facere molestias laudantium asperiores fugiat. Cum quas, vitae nihil?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, possimus natus sint aliquid, provident quidem eaque dolorem harum recusandae delectus voluptas incidunt
+                        </p>
+                        <a href="" class="btn btn--green">Book now</a>
+                    </div>
+                </div>
+            </div>
         </main>
 
     </body>
